# one_seek_one_read

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  archive.pl  create_dummy.pl  resource.index  step1.extract.pl  test.pl
.claude/: settings.local.json
benches/: benchmarks.rs
scripts/: list_resource.pl  step2.clean_up_path.pl  test.pl
src/: archive.rs  index.rs  lib.rs  main.rs  normal.rs  test_utils.rs  util.rs
tests/: lib.rs
