[package]
name = "one_seek_one_read"
version = "0.1.0"
authors = ["KUNIYOSHI Kouji <kuniyoshi.kouji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_enums = "0.7.1"
env_logger = "0.7.1"
hex = "0.4.1"
log = "0.4.8"
rand = "0.7.3"
sha-1 = "0.8.2"
